[project]
name = "alignment-tax-benchmark-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.3",
    "matplotlib>=3.10.8",
    "mlx-lm>=0.31.1",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "transformers>=5.3.0",
]
